Kubernetes/networkPolicies/ingress/allow-client-to-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-server
  namespace: vansystem
spec:
  podSelector:
    matchLabels:
      app: server

  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client
