Kubernetes/networkPolicies/ingress/allow-pgadmin-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pgadmin-to-postgres
  namespace: vansystem
spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pgadmin
